tests/rt/neg/ifc/lclear-implicit-raise.trp
(* negative test; this program attempts to raise the 
   mailbox clearance in a high context, violating 
   the non-sensitive upgrade like property of the mailbox
   semantics
*)

if (true raisedTo `{alice}`) 
        then raisembox (`{alice}`)  
        else ()

